# hicstuff

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yml  publish.yml  pypi-publish.yml
doc/: conf.py  data_format.rst  environment.yml  quickstart.rst  requirements.txt
doc/notebooks/: demo_api.ipynb  demo_cli.ipynb
doc/notebooks/example_data/: fragments_list.txt
hicstuff/: commands.py  cutsite.py  digest.py  distance_law.py  hicstuff.py  io.py  pipeline.py  stats.py
src/hicstuff/: __init__.py  _misc.py  cli.py  commands.py  cutsite.py  digest.py  distance_law.py  filter.py  hicstuff.py  io.py  iteralign.py  log.py  main.py  pipeline.py  stats.py  view.py
test_data/genome/: seq_chromnames-as-number.fa  seq_chromnames-as-number.fa.fai
tests/: test_commands.py  test_digest.py  test_distance_law.py  test_doctests.py  test_filter.py  test_hicstuff.py  test_io.py  test_pipeline.py
